@@ -63,6 +63,7 @@ Changes for 1.7.0
 
 Changes for 1.6.6
 
+ - [ZBX-853] fixed item massdelete if not zabbix item selected (Artem)
  - [ZBX-963] removed sid from users map element url (Artem)
  - [ZBX-980] removed sid from users trigger url (Artem)
  - [ZBX-981] fixed aggregate item helper text (Richlv)
